# CAD-Designer-Web

./: .gitignore  .prettierignore  Readme.md  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
css/: main.css  main.min.css  materialize.css
example_input/: shirt.json  test.py
js/: iframe-helper.js  materialize.js
json-editor/: jsoneditor.min.css  jsoneditor.min.js
leptos-controller/: Cargo.toml
leptos-controller/src/: block.rs  entity.rs  insert.rs  lib.rs  parsePattern.rs  parse_pattern.rs  pattern.rs
leptos-controller/tests/: test_parse_pattern.rs
src/: action.ts  actionTypes.ts  action_types.ts  buffers.ts  camera.ts  coordinates.ts  displaySelection.ts  events.ts  fabricHandle.ts  globals.ts  index.html  input.ts  main.ts  menuEvents.ts  parseJson.ts  pattern.ts  patternHandle.ts  projection.ts  rendering.ts  settings.ts  setupGUIOptions.ts  util.ts
src/interfaces/: settings.ts
src/meshes/: square.ts
src/shaders/: cube.ts  lines.ts  lines.wgsl  square.ts  square.wgsl
wasm-controller/: Cargo.toml
wasm-controller/src/: block.rs  entity.rs  handle.rs  lib.rs  parse_pattern.rs  pattern.rs  user_settings.rs
wasm-controller/src/utils/: bounding_box.rs  color.rs  memory.rs  mod.rs  parse.rs
wasm-controller/tests/: test_parse_pattern.rs
wasm-model/src/: block.rs  drawing_output.rs  drawing_parameters.rs  entity.rs  handle.rs  insert.rs  lib.rs  pattern.rs  user_settings.rs
wasm-model/src/utils/: mod.rs
wasm-model/tests/: test_parse_pattern.rs
