[package]
name = "leptos-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
wasm-bindgen = "0.2"


[lib]
crate-type = ["cdylib", "rlib"]
