[package]
name = "cad_pattern_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlElement", "console"] }
wasm-bindgen = "0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]
